@@ -19,7 +19,6 @@
  */
 package org.xwiki.url;
 
-import java.util.Collections;
 import java.util.List;
 
 import org.xwiki.component.annotation.Role;
@@ -61,7 +60,7 @@ public interface URLConfiguration
      */
     default List<String> getTrustedDomains()
     {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -85,9 +84,38 @@ public interface URLConfiguration
      * @since 14.10.4
      * @since 15.0
      */
-    @Unstable
     default List<String> getTrustedSchemes()
     {
         return List.of("http", "https", "ftp");
+    }
+
+    /**
+     * Define the policy to use for URL checks performed in the UI, whether the user should be asked for confirmation
+     * when going to an untrusted domain.
+     * @return the configured policy
+     * @since 17.9.0
+     * @since 17.4.7
+     * @since 16.10.14
+     */
+    @Unstable
+    default FrontendURLCheckPolicy getFrontendUrlCheckPolicy()
+    {
+        return FrontendURLCheckPolicy.COMMENTS;
+    }
+
+    /**
+     * Define a list of allowed frontend URLs: in case the {@link #getFrontendUrlCheckPolicy()} is enabled, then
+     * this list can be used to allow specific URLs without asking confirmation from the user, while avoiding to add
+     * an entire domain in the list of trusted domains.
+     *
+     * @return the list of allowed frontend URLs
+     * @since 17.9.0RC1
+     * @since 17.4.6
+     * @since 16.10.13
+     */
+    @Unstable
+    default List<String> getAllowedFrontendUrls()
+    {
+        return List.of();
     }
 }
